  because the form button now handles correctly
  each perm.
- Removed obsolete widget types registration.
- tune #1133: getSortedContentTypes.py is too slow
- effective_date gets automatically updated at publish time (in
  section_content_wf) if no specific dates were set by the user
- CPSDefault.utils provides a fast filterContents function that replace the one
  in skins/cps_default/filterContents.py, the interface is changed a bit:
  * you must supply the `context` as the first parameter
  * `displayed` is renamed `filter_ptypes` and default is None instead of ['']
  * `sort_by` is renamed into `sort_on` and default is None
  * `direction` is renamed into `sort_order`
- CPSDefault.utils provides getFolderContents and getCatalogFolderContents.
- New indexes: container_path, position_in_container and nodes set.
- Adding a boolean property 'use_catalog_for_folder_contents' to a folder will
  makes the skins/cps_default/getFolderContents.py (and thus folder_contents
  and folder_view) uses the catalog to get the folder contents.
  This is faster especially on huge folder.
- added deprecation information for CPSBoxes modules.
- the "Edit this text" link on the welcome message goes to the portlet editor.
- added a temporary "folder contents" portlet in the main part of the screen
  until there is a more extended view for it (cf. #573)
- The "My preferences" action has now the standard CMF 'preferences' id and
  depends on membership tool like in CMF.
- Use the EventTest test setup code from CPSCore requiring Zope 2.9.
- CPS css_slot was renamed style_slot to comply with later CMF/Zope 3 standard.
- The CPSDefaultTestCase no longer installs and create CPSSharedCalendars
  unless you explicitly install CPSSharedCalendar with installProduct in your
  test.
- Change the default profile to use a CPS User Folder and CPS ZODB Directories
- Add default roles in the VariousImporter class
- Create the default manager from the CPS site add form