@@ -1,6 +1,7 @@
 <?xml version="1.0"?>
 <object name="portal_directories" meta_type="CPS Directory Tool">
  <property name="title"></property>
+ <object name="default_directory_ram_cache" meta_type="RAM Cache Manager"/>
  <object name="groups" meta_type="CPS ZODB Directory"/>
  <object name="members" meta_type="CPS ZODB Directory"/>
  <object name="roles" meta_type="CPS ZODB Directory"/>
