@@ -1,0 +1,10 @@
+<?xml version="1.0"?>
+<object name="default_directory_ram_cache" meta_type="RAM Cache Manager">
+ <property name="title"></property>
+ <property name="threshold">1000</property>
+ <property name="request_vars">
+  <element value="AUTHENTICATED_USER"/>
+ </property>
+ <property name="cleanup_interval">300</property>
+ <property name="max_age">3600</property>
+</object>
