@@ -22,4 +22,5 @@
  <property name="password_field">password</property>
  <entry-local-role
     role="Owner">python:entry.get('id') == user_id</entry-local-role>
+ <cache-manager id="default_directory_ram_cache"/>
 </object>
