@@ -16,4 +16,6 @@
   <element value="role"/>
  </property>
  <property name="is_hierarchical">False</property>
+ <property name="password_field"></property>
+ <cache-manager id="default_directory_ram_cache"/>
 </object>
