@@ -67,3 +67,4 @@ New internal features:
 - Change the default profile to use a CPS User Folder and CPS ZODB Directories
 - Add default roles in the VariousImporter class
 - Create the default manager from the CPS site add form
+- add a RAM Cache Manager for the default directories in default profile
